# logfile-analyzer

./: .gitignore  CLAUDE.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
specs/001-log-analyzer-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mcp-port-configuration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-fix-workspace-file-persistence/: plan.md  (+5 more)
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: files.rs  highlights.rs  mod.rs  search.rs  settings.rs  types.rs  update.rs  viewing.rs  workspace.rs
src-tauri/src/logfile/: mmap_index.rs  mod.rs  offset.rs  query.rs  search.rs  timestamp.rs  view_filter.rs
src-tauri/src/mcp/: mod.rs  server.rs  tools.rs
src-tauri/src/persistence/: schema.rs
src-tauri/src/persistence/repo/: highlight.rs  log_file_entry.rs  mod.rs  search_history.rs  settings.rs  workspace.rs
src-tauri/tests/: export_bindings.rs  files_test.rs  highlights_test.rs  mcp_highlights_test.rs  mcp_server_test.rs  mcp_settings_test.rs  mcp_tools_test.rs  search_test.rs  viewing_test.rs  workspace_persistence_test.rs
(+217 files in other folders)
