[package]
name = "logfile-analyzer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "logfile_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["specta"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9.10"
regex = "1.12.4"
rayon = "1.12.0"
chrono = "0.4.45"
rusqlite = { version = "0.37", features = ["bundled"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-util = "0.7.18"
axum = "0.8.9"
specta = "2.0.0-rc.25"
specta-typescript = "0.0.12"
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
time = "=0.3.36"

[dev-dependencies]
tauri = { version = "2", features = ["specta", "test"] }
rmcp = { version = "1.7.0", features = ["client", "transport-streamable-http-client-reqwest"] }
